Fix too much space between inputs in SignUpComponent

--- a/src/app/authentication/log-in/log-in.component.scss
+++ b/src/app/authentication/log-in/log-in.component.scss
@@ -7,7 +7,7 @@
     border: rgb(226, 226, 226) 1px solid;
 }
 
-.log-in-box__header {
+.the-cookbook-logotype--50px {
     font-size: 50px;
     text-align: center;
     font-family: 'Odibee Sans';
