--- a/src/app/registration/sign-up/sign-up.component.scss
+++ b/src/app/registration/sign-up/sign-up.component.scss
@@ -7,11 +7,6 @@
     border: rgb(226, 226, 226) 1px solid;
 }
 
-.the-cookbook-logotype {
-    font-family: 'Odibee Sans';
-    margin-bottom: 30px;
-}
-
 .the-cookbook-logotype--50px {
     font-size: 50px;
     text-align: center;
