--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,3 +42,8 @@ body {
 .flex-row--justify-center {
   justify-content: center;
 }
+
+.the-cookbook-logotype {
+  font-family: 'Odibee Sans';
+  margin-bottom: 15px;
+}
